--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,22 @@
-body {
-  margin: 0;
+@font-face {
+  font-family: system;
+  font-style: normal;
+  font-weight: 300;
+  src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"), local(".LucidaGrandeUI"), local("Ubuntu Light"), local("Segoe UI Light"), local("Roboto-Light"), local("DroidSans"), local("Tahoma");
+}
+
+* {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  font-family: "system";
+}
+
+html, body, #root {
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
   padding: 0;
-  font-family: sans-serif;
+  margin: 0;
 }
