--- a/src/containers/Main.css
+++ b/src/containers/Main.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #222;
+  background-color: black;
   height: 100%;
 }
 
@@ -15,6 +15,11 @@
 .App-title {
   font-size: 1.5em;
   color: white;
+}
+
+.App-content {
+  width: 100%;
+  height: 80%;
 }
 
 @keyframes App-logo-spin {
