--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
+@import "~ubuntu-fontface/ubuntu.css";
+
 @font-face {
   font-family: system;
   font-style: normal;
   font-weight: 300;
-  src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"), local(".LucidaGrandeUI"), local("Ubuntu Light"), local("Segoe UI Light"), local("Roboto-Light"), local("DroidSans"), local("Tahoma");
-}
+  src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"), local(".LucidaGrandeUI"), local("Ubuntu"), local("Segoe UI Light"), local("Roboto-Light"), local("DroidSans"), local("Helvetica"), local("Tahoma"), local("Arial");
+}  
 
 * {
   -webkit-user-select: none;
