--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  font-family: system 'ubuntu light';
+  font-family: system 'Ubuntu Light';
 }
 
 html, body, #root {
