--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,7 @@
 @font-face {
   font-family: system;
   font-style: normal;
-  font-weight: 300;
-  src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"), local(".LucidaGrandeUI"), local("Ubuntu Light"), local("Segoe UI Light"), local("Roboto-Light"), local("DroidSans"), local("Helvetica"), local("Tahoma"), local("Arial");
+  src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"), local(".LucidaGrandeUI"), local("Ubuntu Light"), local("Segoe UI Light"), local("Roboto-Light"), local("DroidSans");
 }  
 
 * {
@@ -12,7 +11,8 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  font-family: 'system', 'Ubuntu Light';
+  font-weight: 300;
+  font-family: 'system', 'Ubuntu';
 }
 
 html, body, #root {
