--- a/index.css
+++ b/index.css
@@ -18,6 +18,16 @@ html, body, #app {
   cursor: default;
 }
 
+table {
+  width: 100%;
+  text-align: center;
+  border-collapse: collapse;
+}
+
+td {
+  padding: 0.5rem; 
+}
+
 .container {
   widows: 100%;
   height: 100%;
@@ -54,10 +64,6 @@ th .grid-cell {
   white-space: nowrap;
   background-color: #eee;
   border: #ddd solid 1px;
-}
-
-.grid table {
-  border-collapse: collapse;
 }
 
 .grid td  {
@@ -103,8 +109,6 @@ th .grid-cell {
   width: 80%;
 }
 
-.player {
-  width: 320px;
-  height: 240px;
-  border: #ddd solid 1px;
+.offline {
+  opacity: 0.5;
 }
