--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,18 @@
 /* @import "~ubuntu-fontface/ubuntu.css"; */
 /* @import "https://fonts.googleapis.com/icon?family=Material+Icons"; */
-@import "~material-components-web/dist/material-components-web.min.css";
 /* @import "~material-design-icons/iconfont/material-icons.css"; */
+
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Material Icons'),
+    local('MaterialIcons-Regular'),
+    url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
+    url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
+    url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
+}
+
 * {
   user-select: none;
 }
