--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,8 @@
 /* @import "https://fonts.googleapis.com/icon?family=Material+Icons"; */
 /* @import "~material-design-icons/iconfont/material-icons.css"; */
 
+/* @import "../assets/material-icons.css"; */
+
 @font-face {
   font-family: 'Material Icons';
   font-style: normal;
@@ -38,15 +40,6 @@ table {
 
 td {
   padding: 0.5rem; 
-}
-
-.container {
-  widows: 100%;
-  height: 100%;
-}
-
-.paper {
-  padding: 1rem;
 }
 
 .offline {
