--- a/index.css
+++ b/index.css
@@ -22,17 +22,13 @@ table {
   border-collapse: collapse;
 }
 
-td {
-  padding: 0.5rem; 
-}
-
 .container {
   widows: 100%;
   height: 100%;
 }
 
 .paper {
-  padding: 1rem;
+  padding: 12px;
 }
 
 .offline {
