--- a/index.css
+++ b/index.css
@@ -18,7 +18,6 @@ html, body, #app {
 
 table {
   width: 100%;
-  text-align: center;
   border-collapse: collapse;
 }
 
@@ -45,4 +44,8 @@ table {
 .dropzone {
   height: 100%;
   width: 100%;
+}
+
+.title input {
+  font-size: 48px;
 }
