--- a/index.css
+++ b/index.css
@@ -22,8 +22,16 @@ table {
 }
 
 .container {
+  display: block;
   widows: 100%;
   height: 100%;
+}
+
+.project {
+  widows: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .paper {
